# hmm

./: .gitignore  Cargo.toml  infostealer-architecture.md  remain.md
docs/: 01-system-overview.md  02-core-engine.md  03-module-design.md  04-data-extraction.md  05-output-exfiltration.md  06-evasion-optimization.md
src/: main.rs
src/module/: mod.rs
src/module/core/: cancellation.rs  config.rs  context.rs  errors.rs  mod.rs  orchestrator.rs  state.rs  task.rs
src/module/evasion/: anti_debug.rs  anti_sandbox.rs  anti_vm.rs  api_hash.rs  check.rs  errors.rs  fileless.rs  inject.rs  mod.rs  obfuscate.rs  packer.rs
src/module/extractor/: audio.rs  browser.rs  clipboard.rs  decrypt.rs  errors.rs  keylogger.rs  memory.rs  mod.rs  screenshot.rs  system.rs  types.rs  wallet.rs  webcam.rs
src/module/persistence/: errors.rs  mod.rs  registry.rs  scheduled_task.rs  service.rs  startup.rs
src/module/processing/: compress.rs  dedupe.rs  encrypt.rs  errors.rs  mod.rs  normalize.rs  pipeline.rs  types.rs
src/module/scheduler/: errors.rs  mod.rs  scheduler.rs  task.rs
src/module/storage/: archive.rs  errors.rs  index.rs  mod.rs  retention.rs  store.rs
src/module/transport/: client.rs  config.rs  discord.rs  dns.rs  errors.rs  mod.rs  payload.rs  telegram.rs
test/integration_test/core/: core.rs
test/integration_test/extractor/: extractor.rs
test/integration_test/processing/: processing.rs
test/integration_test/scheduler/: scheduler.rs
test/integration_test/storage/: storage.rs
test/integration_test/transport/: transport.rs
tests/: integration.rs
